--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,31 @@
 version: "3.8"
 
+# =============================================================================
+# AppDock - Single Container Deployment
+# Chỉ cần 1 container duy nhất chứa cả Frontend và Backend
+# =============================================================================
+
 services:
-  backend:
+  appdock:
     build:
-      context: ./backend
+      context: .
       dockerfile: Dockerfile
+    image: appdock:latest
+    container_name: appdock
     ports:
-      - "8080:8080"
+      - "3000:3000"
     volumes:
       # Mount Docker socket để app có thể quản lý Docker
+      # Linux/macOS: /var/run/docker.sock
+      # Windows (WSL2): /var/run/docker.sock hoặc //var/run/docker.sock
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - PORT=8080
+      - PORT=3000
+      - GIN_MODE=release
     restart: unless-stopped
-    networks:
-      - appdock-network
-
-  frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
-    ports:
-      - "3000:80"
-    depends_on:
-      - backend
-    restart: unless-stopped
-    networks:
-      - appdock-network
-
-networks:
-  appdock-network:
-    driver: bridge
+    healthcheck:
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/system/info"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
