--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -3,14 +3,14 @@ name: Build and Push to Docker Hub
 on:
   release:
     types: [published]
-  
+
   # Cho phép chạy manual từ Actions tab
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Image tag (e.g., v1.0.0)'
+        description: "Image tag (e.g., v1.0.0)"
         required: false
-        default: 'latest'
+        default: "latest"
 
 env:
   # Docker Hub repository name
@@ -19,7 +19,7 @@ env:
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
-    
+
     permissions:
       contents: read
       packages: write
@@ -68,15 +68,6 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-
-      - name: Update Docker Hub Description
-        uses: peter-evans/dockerhub-description@v4
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ env.DOCKERHUB_REPO }}
-          readme-filepath: ./README.md
-          short-description: "AppDock - Modern Docker Management UI with Vietnamese style 🇻🇳"
 
       - name: Summary
         run: |
