--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,6 +17,10 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
       - PORT=8080
+      - APPDOCK_USERNAME=admin
+      - APPDOCK_PASSWORD=appdock
+      - APPDOCK_JWT_SECRET=dev-secret-key-not-for-production
+      - APPDOCK_AUTH_DISABLED=false
     restart: unless-stopped
     networks:
       - appdock-network
